# osdemo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: rust.yml
asm/: entry.S
src/: apps.rs  asm.rs  console.rs  cpus.rs  devices.rs  drivers.rs  exceptions.rs  interrupts.rs  logger.rs  main.rs  pagetable.rs  pci.rs  platform.rs  secondary_entry.S  secondary_entry.rs  virtio.rs
src/apps/: alarm.rs  cpus.rs  shell.rs
src/asm/: idmap_crosvm.S
src/drivers/: pl011.rs  pl031.rs  uart16550.rs  uart8250.rs
src/platform/: crosvm.rs  qemu.rs
src/platform/qemu/: pl011.rs
