[package]
name = "osdemo"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An example of combining various libraries for aarch64 OS development."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/osdemo"
keywords = ["arm", "aarch64", "cortex-a", "osdev"]
categories = ["embedded", "no-std"]

[dependencies]
aarch64-rt = "0.2.2"
aarch64-paging = { version = "0.9.1", default-features = false }
arm_pl031 = "0.2.1"
arm-gic = "0.5.0"
arm-pl011-uart = "0.3.1"
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.9.1"
buddy_system_allocator = { version = "0.11.0", default-features = false, features = [
  "alloc",
  "use_spin",
] }
chrono = { version = "0.4.41", default-features = false }
embedded-io = "0.6.1"
flat_device_tree = { version = "3.1.1", features = ["pretty-printing"] }
log = "0.4.27"
percore = "0.1.0"
smccc = "0.2.2"
spin = { version = "0.10.0", features = [
  "spin_mutex",
  "once",
], default-features = false }
virtio-drivers = { version = "0.11.0", default-features = false, features = [
  "alloc",
] }
